outputs/dd8106df-a1ff-4911-a8d4-44f79a2fad79.txt
  File "C:\Users\Dell\Dropbox\PC\Desktop\ONLINE JUDGE\OJ\codes\dd8106df-a1ff-4911-a8d4-44f79a2fad79.py", line 7
    for i in range (1:10):
                     ^
SyntaxError: invalid syntax
